# ecomet

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .wemake.ini  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
docs/: manual_testing_latest_ru.md  tasks_description.md  Описание задач.docx
shared/: __init__.py
shared/domain/: __init__.py
shared/domain/entities/: base.py  exceptions.py
shared/domain/protocols/: __init__.py  database.py  rate_limiter.py  repository.py
shared/infrastructure/: __init__.py  version.py
shared/infrastructure/config/: base.py  clickhouse.py  github.py  postgres.py
shared/infrastructure/database/: clickhouse_client.py  postgres_pool.py
shared/infrastructure/logging/: setup.py
shared/infrastructure/rate_limiting/: __init__.py  composite_limiter.py  semaphore_limiter.py  token_bucket.py
shared/presentation/: __init__.py
shared/presentation/fastapi/: __init__.py  exception_handlers.py  health.py
shared/tests/: __init__.py  test_base_entity.py  test_clickhouse_client.py  test_config.py  test_exception_handlers.py  test_health.py  test_logging.py  test_postgres_pool.py  test_postgres_pool_extended.py  test_rate_limiters.py  test_version.py
tasks/task_1/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
tasks/task_1/presentation/: __init__.py  app.py  dependencies.py  endpoints.py
tasks/task_1/tests/: __init__.py  conftest.py
tasks/task_1/tests/integration/: __init__.py  test_postgres_integration.py
tasks/task_1/tests/unit/: __init__.py  test_app.py  test_dependencies.py  test_endpoints.py  test_lifespan.py
tasks/task_2/: .env.example  Dockerfile  main.py  pyproject.toml
tasks/task_2/domain/: entities.py  protocols.py
tasks/task_2/infrastructure/: github_scraper.py  http_client.py
tasks/task_2/presentation/: app.py  dependencies.py  endpoints.py  models.py
tasks/task_2/tests/: __init__.py
tasks/task_2/tests/unit/: __init__.py  test_dependencies.py  test_endpoints.py  test_github_scraper.py  test_http_client.py
tasks/task_3/: .env.example  Dockerfile  main.py  pyproject.toml  tables.sql
tasks/task_3/domain/: use_cases.py
tasks/task_3/presentation/: app.py  dependencies.py  endpoints.py  models.py
tasks/task_3/tests/: __init__.py
tasks/task_3/tests/unit/: __init__.py  test_dependencies.py  test_endpoints.py  test_use_cases.py
tasks/task_4/: .env.example  Dockerfile  main.py  pyproject.toml  table.sql
tasks/task_4/domain/: entities.py  protocols.py  use_cases.py
tasks/task_4/infrastructure/clickhouse/: queries.py  repository.py
tasks/task_4/presentation/: app.py  dependencies.py  endpoints.py  models.py
tasks/task_4/tests/: __init__.py
tasks/task_4/tests/unit/: __init__.py  (+4 more)
