[project]
name = "ecomet-task-1"
version = "0.1.0"
description = "Task 1 - PostgreSQL Connection Pool with Clean Architecture"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "loguru>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
